# nrg

./: .coverage  .env.example  .gitignore  AGENTS.md  Makefile  pyproject.toml  requirements.txt  spec.md
.claude/: settings.local.json
config/: account.toml  account.yaml  mapping.csv  thesis.toml  thesis.yaml
docs/: SETUP.md
nrg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  main.py  notifications.py  risk_engine.py  sheets_writer.py  storage.py
src/connectors/: __init__.py  base.py  fidelity_csv.py  schwab.py
tests/: __init__.py  conftest.py  test_main.py  test_notifications.py  test_risk_engine.py  test_sheets_writer.py  test_storage.py
tests/test_connectors/: __init__.py  test_fidelity_csv.py  test_schwab.py
